Fix players not showing after clicking categories

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -18,10 +18,6 @@ a.active {
     color: $color-danger;
 }
 
-.categories {
-    display: flex;
-}
-
 .category {
    padding-left: 10px;
    text-decoration: none;
