--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -32,3 +32,10 @@
     transition: transform 0.2s;
   }
 
+  #home .player {
+    display: none!important;
+  }
+
+  #home .player.active {
+    display: flex!important;
+  }
